<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        style="@style/entryTitleText.Order"
        android:text="@string/title_category"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_category_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"

        style="@style/inputTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_category_title"
            android:inputType="textCapSentences"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/hint_category_title"
            tools:text="Category 1"

            style="@style/inputText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_accept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        style="@style/acceptButton"
        android:text="@string/button_accept"/>
</androidx.constraintlayout.widget.ConstraintLayout>
