<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        style="@style/entryTitleText.Order"
        android:text="@string/title_note"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintBottom_toTopOf="@+id/button_accept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp" >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                style="@style/inputTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_note_title"
                    android:inputType="textCapSentences"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/hint_note_title"
                    tools:text="Product 1"

                    style="@style/inputText"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"

                app:layout_constraintTop_toBottomOf="@+id/til_note_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:entries="@array/categories" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tv_image_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingHorizontal="12dp"

                app:layout_constraintTop_toBottomOf="@id/spinner_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                tools:text="image.png"
                style="@style/constText.White"
                android:gravity="center"
                android:background="@drawable/background_rectangle"
                android:backgroundTint="@color/light_black"

                android:drawableEnd="@drawable/ic_image"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_image_url"

                style="@style/inputTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_description"
                    android:inputType="textMultiLine"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/hint_description"
                    tools:text="Какое-то длинное описание"

                    style="@style/inputText"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/weight_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                android:orientation="horizontal"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_description"
                app:layout_constraintBottom_toTopOf="@+id/price_layout">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"

                    style="@style/inputTextLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_weight"
                        android:inputType="numberDecimal"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/hint_weight"
                        tools:text="300.00"

                        style="@style/inputText"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_weight_unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"

                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textAlignment="center"

                    style="@style/constText"
                    android:textStyle="bold"
                    android:text="@string/const_weight_unit"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/price_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                android:orientation="horizontal"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weight_layout">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"

                    style="@style/inputTextLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_price"
                        android:inputType="numberDecimal"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/hint_price"
                        tools:text="300.00"

                        style="@style/inputText"/>

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/tv_price_unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"

                    android:layout_gravity="center"

                    app:srcCompat="@drawable/ic_ruble_dark_gray"
                    android:contentDescription="@string/iv_desc_currency_icon" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spinner_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"

                app:layout_constraintTop_toBottomOf="@+id/price_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:entries="@array/availabilities"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_accept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        style="@style/acceptButton"
        android:text="@string/button_accept"/>

</androidx.constraintlayout.widget.ConstraintLayout>
